# libssh2pp

./: .gitignore  CMakeLists.txt  README.md  libssh2.hpp  libssh2pp.kdev4  tests.cpp
.kdev4/: libssh2pp.kdev4
CMakeModules/: FindLibSSH2.cmake
